Improve error framework
